Revert "IntelliJ Inspection and adding of final"