@@ -2,20 +2,20 @@ package rocks.cleanstone.net.minecraft.login;
 
 import com.google.common.base.Charsets;
 import com.google.gson.Gson;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.Reader;
-import java.net.URL;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
-import java.security.PublicKey;
-import javax.net.ssl.HttpsURLConnection;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.AsyncResult;
 import org.springframework.stereotype.Component;
 import org.springframework.util.concurrent.ListenableFuture;
 import rocks.cleanstone.net.Connection;
+
+import javax.net.ssl.HttpsURLConnection;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.Reader;
+import java.net.URL;
+import java.net.URLEncoder;
+import java.security.PublicKey;
 
 @Slf4j
 @Component
@@ -26,17 +26,17 @@ public class SimpleSessionServerRequester implements SessionServerRequester {
     public ListenableFuture<SessionServerResponse> request(Connection connection, LoginData loginData,
                                                            PublicKey publicKey) {
         try {
-            final String authHash = LoginCrypto.generateAuthHash(connection.getSharedSecret(), publicKey);
-            final URL url = new URL(SESSION_SERVER_URL
+            String authHash = LoginCrypto.generateAuthHash(connection.getSharedSecret(), publicKey);
+            URL url = new URL(SESSION_SERVER_URL
                     + String.format("?username=%s&serverId=%s&ip=%s", loginData.getPlayerName(), authHash,
-                    URLEncoder.encode(connection.getAddress().getHostAddress(), String.valueOf(StandardCharsets.UTF_8))));
-            final HttpsURLConnection con = (HttpsURLConnection) url.openConnection();
+                    URLEncoder.encode(connection.getAddress().getHostAddress(), "UTF-8")));
+            HttpsURLConnection con = (HttpsURLConnection) url.openConnection();
             con.setRequestMethod("GET");
             con.setRequestProperty("Content-Type", "application/json");
             con.setConnectTimeout(5000);
             con.setReadTimeout(5000);
-            try (final Reader reader = new InputStreamReader(con.getInputStream(), Charsets.UTF_8)) {
-                final Gson gson = new Gson();
+            try (Reader reader = new InputStreamReader(con.getInputStream(), Charsets.UTF_8)) {
+                Gson gson = new Gson();
                 return new AsyncResult<>(gson.fromJson(reader, SessionServerResponse.class));
             }
         } catch (IOException e) {
